--- a/generateData.qmd
+++ b/generateData.qmd
@@ -11,10 +11,11 @@ editor: visual
 setwd("/Users/radhika/Library/CloudStorage/GoogleDrive-rkap786@stanford.edu/My Drive/0. Projects - Stanford/Network equating/Code/network_equate")
 source("genData.R")
 source("genLinkage.R")
+source("linearEquate.R")
 library(dplyr)
 library(ggplot2)
 library(tidyverse)
-
+library(igraph)
 
 ```
 
@@ -74,6 +75,15 @@ data=x[[1]] ## Item and respondent level response data for each test
 true.ability= x[[2]]
 sum_scores= x[[3]]
 
+
+
+
+
+```
+
+Plot difficulty
+
+```{r}
 #### Only observed sum scores for observed score equating
 
 data.frame(sum_scores) |> 
@@ -87,9 +97,6 @@ data.frame(sum_scores) |>
 
 ## Common students for overlap
 #sum_scores |> dplyr::select(totalScore1, totalScore2) |> drop_na() |> nrow()
-
-
-
 
 ```
 
@@ -185,64 +192,7 @@ noverlap= matrix(c(600, 200, 200,
                    200, 200, 600),3,3, byrow=T)
 
 
-  id_selected=c()
-  data=sum_scores
-  data_missing= data
-  Nr= nrow(data_missing)
-  Nc= ncol(data_missing)-1
-  list=data_missing$id
-  
-### Only in nodes 
-  for (i in 1:Nc) {
-    ## Individual nodes
-    m0= sample(list, noverlap[i,i], replace = F)
-    data_missing[m0,-c(1,(i+1))]= NA
-  }
-  
-    # m0= sample(list, noverlap[1,1], replace = F)
-    # data_missing[m0,-c(1,2)]= NA
-    # 
-    # # Only node2
-    # list= setdiff(list, m0)
-    # m0= sample(list, noverlap[2,2], replace = F)
-    # data_missing[m0,-c(1,3)]= NA
-    # 
-    # # Only node3
-    # list= setdiff(list, m0)
-    # m0= sample(list, noverlap[3,3], replace = F)
-    # data_missing[m0,-c(1,4)]= NA
-    
-    
-### First node with node 2 
-  overlap.count=noverlap[1,2] 
-   m.new= data_missing[,-4] # total score 2 and ID
-    m.new= m.new |> 
-      filter(!is.na(totalScore1) & !is.na(totalScore2)) |>
-      pull(id)
-    m12_overlap= sample(m.new, overlap.count, replace=F)
-    data_missing[m12_overlap, 4]= NA
-    
-    ### First node with node3
-    overlap.count=noverlap[1,3] 
-   m.new= data_missing[,-3] # total score 3 and ID
-    m.new= m.new |> filter(!is.na(totalScore1) &
-                             !is.na(totalScore3)) |> pull(id)
-    m13_overlap= sample(m.new, overlap.count, replace=F)
-    data_missing[m13_overlap, 3]= NA
-    
-
-      ### Node 2 & node 3
-    overlap.count=noverlap[2,3] 
-   m.new= data_missing[,-2] # total score 3 and ID
-    m.new= m.new |> filter(!is.na(totalScore2) &
-                             !is.na(totalScore3)) |> pull(id)
-    m23_overlap= sample(m.new, overlap.count, replace=F)
-    data_missing[m23_overlap, 2]= NA
-    
-## Data missing is the dataset to return
-    
-
-
+data_3nodes= add_missing_3nodes(sum_scores, data, edges, noverlap)
 
 
 
@@ -273,24 +223,34 @@ sum_scores= x[[3]]
 
 ### Specify overlap, specified as (1) Overlap between adjacent nodes (2) number of respondents only in one test 
 
-cty_overlap_setup = c(10,5,2,1)
-ncountries_test_setup= list(c(12,12,12,12,12), 
-       c(16,16,16,16,16), 
-       c(18,18,18,18,20), 
-       c(19,19,19,19,20))
+### Example 1
+#### 5 tests, 10 country overlaps, 12 countries only took each test (no overlap)
+cty_overlap= 10
+ncountries_test= 12
+ntests= 5
+data_missing= addmissing_single_link(data[,-1], cty_overlap, ncountries_test,ntests)
+data_missing=bind_cols(id=1:nrow(data_missing),data_missing)
+   
+   
+cty_overlap= 5
+ncountries_test= 16
+ntests= 5
+data_missing= addmissing_single_link(data[,-1], cty_overlap, ncountries_test,ntests)
+data_missing=bind_cols(id=1:nrow(data_missing),data_missing)
 
+   
+cty_overlap= 2
+ncountries_test= c(18,18,18,18,20)
+ntests= 5
+data_missing= addmissing_single_link(data[,-1], cty_overlap, ncountries_test,ntests)
+data_missing=bind_cols(id=1:nrow(data_missing),data_missing)
 
+cty_overlap= 1
+ncountries_test= c(19,19,19,19,20)
+ntests= 5
+data_missing= addmissing_single_link(data[,-1], cty_overlap, ncountries_test,ntests)
+data_missing=bind_cols(id=1:nrow(data_missing),data_missing)
 
- data=sum_scores
- result=list()
- for (i in length(cty_overlap_setup)) {
-   cty_overlap= cty_overlap_setup[i]
-   ncountries_test= ncountries_test_setup[[i]]
-   ntests= numT
-   data_missing= addmissing_single_link(data[,-1], cty_overlap, ncountries_test,ntests)
-   data_missing=bind_cols(id=1:nrow(data_missing),data_missing)
-   result[[i]]=data_missing
- }
 
 
 
@@ -310,4 +270,43 @@ ncountries_test_setup= list(c(12,12,12,12,12),
 
 ```
 
-### 
+## Plot the network
+
+```{r}
+
+## Get adjacency matrix
+adj.matrix= getadjmatrix(data_3nodes[,-1])
+
+edgeNetwork <- graph_from_adjacency_matrix(adj.matrix, mode="undirected", weighted = T)
+plot(edgeNetwork)
+  
+  
+
+
+```
+
+## Estimate performance of equating
+
+```{r}
+
+### Variable name has to be total score 1,2,3
+### Input is dataframe with id in first column, and scores in remaining columns
+### Name of score variables is totalScore
+x=data_3nodes[,-1]
+id=data_3nodes[,1]
+x_equated= lineq(x,id)
+
+## New scores
+colMeans(x_equated[[1]][,-1], na.rm = T)
+
+
+info= x_equated[[2]]
+plot(NULL,xlim=c(0,12),ylim=c(0,35))
+for (i in 1:(length(x)-1)) {
+  sapply(info,'[[',i)->z
+  z<-t(z)
+  lines(z[,1],z[,2],type='l')
+}
+
+
+```
