--- a/generateData.qmd
+++ b/generateData.qmd
@@ -69,7 +69,7 @@ np= c(1000, 1000, 1000)
 avg_diff = c(1, 0, -1) # Easy, Medium, Hard
 Sigma= diag(numTests)
 #Sigma[outer(1:T, 1:T, function(i,j) i!=j)] <- 0.5
-x = gendata(T, nt=nt, np=np, avg_diff, 
+x = gendata(numTests, nt=nt, np=np, avg_diff, 
                diff_dist="iid", ability_type= "normal")
 data=x[[1]] ## Item and respondent level response data for each test
 true.ability= x[[2]]
@@ -292,8 +292,21 @@ plot(edgeNetwork)
 ### Variable name has to be total score 1,2,3
 ### Input is dataframe with id in first column, and scores in remaining columns
 ### Name of score variables is totalScore
-x=data_3nodes[,-1]
-id=data_3nodes[,1]
+
+numTests = 3
+nt = c(50, 100, 100)
+np= c(1000, 1000, 1000)
+avg_diff = c(1, 0, -1) # Easy, Medium, Hard
+Sigma= diag(numTests)
+#Sigma[outer(1:T, 1:T, function(i,j) i!=j)] <- 0.5
+x = gendata(numTests, nt=nt, np=np, avg_diff, 
+               diff_dist="iid", ability_type= "normal")
+data=x[[1]] ## Item and respondent level response data for each test
+true.ability= x[[2]]
+sum_scores= x[[3]]
+
+x=sum_scores[,-1]
+id=sum_scores[,1]
 x_equated= lineq(x,id)
 
 ## New scores
@@ -309,5 +322,64 @@ for (i in 1:(length(x)-1)) {
   lines(z[,1],z[,2],type='l')
 }
 
+
+### Check results make sense
+
+data_3nodes[,-1] |>
+    pivot_longer(cols= starts_with("totalScore"), 
+               names_to= "test",
+               values_to= "totalScore") |>
+  ggplot(aes(x=totalScore, group=test, fill=test, color=test)) + 
+  geom_density(alpha = 0.1)
+
+
+x_equated[[1]] |>
+    pivot_longer(cols= starts_with("totalScore"), 
+               names_to= "test",
+               values_to= "totalScore") |>
+  ggplot(aes(x=totalScore, group=test, fill=test, color=test)) + 
+  geom_density(alpha = 0.1)
+
+plot(1:length(x_equated[[1]][,2]),x_equated[[1]][,2])
+plot(x[,3],x_equated[[1]][,4])
+plot(x[,2],x_equated[[1]][,3])
+
+### Error of equating -  bootstrap
+
+
+
+
+### Truth is known
+
+
+
+
+
+
+```
+
+### With missing data
+
+```{r}
+
+numTests = 3
+nt = c(50, 100, 100)
+np= c(1000, 1000, 1000)
+avg_diff = c(1, 0, -1) # Easy, Medium, Hard
+Sigma= diag(numTests)
+#Sigma[outer(1:T, 1:T, function(i,j) i!=j)] <- 0.5
+x = gendata(numTests, nt=nt, np=np, avg_diff, 
+               diff_dist="iid", ability_type= "normal")
+data=x[[1]] ## Item and respondent level response data for each test
+true.ability= x[[2]]
+sum_scores= x[[3]]
+
+edges<-matrix(rep(1,9),3,3)
+noverlap= matrix(c(600, 200, 200, 
+                   200, 600, 200, 
+                   200, 200, 600),3,3, byrow=T)
+
+
+data_3nodes= add_missing_3nodes(sum_scores, data, edges, noverlap)
 
 ```
