--- a/generateData.qmd
+++ b/generateData.qmd
@@ -16,6 +16,7 @@ library(dplyr)
 library(ggplot2)
 library(tidyverse)
 library(igraph)
+library(ggpubr)
 
 ```
 
@@ -276,9 +277,10 @@ data_missing=bind_cols(id=1:nrow(data_missing),data_missing)
 
 ## Get adjacency matrix
 adj.matrix= getadjmatrix(data_3nodes[,-1])
+diag(adj.matrix)= c(0,0,0)
 
 edgeNetwork <- graph_from_adjacency_matrix(adj.matrix, mode="undirected", weighted = T)
-plot(edgeNetwork)
+plot(edgeNetwork, vertex.label=c("X","Y","Z"))
   
   
 
@@ -290,7 +292,6 @@ plot(edgeNetwork)
 ```{r}
 
 ### Variable name has to be total score 1,2,3
-### Input is dataframe with id in first column, and scores in remaining columns
 ### Name of score variables is totalScore
 
 numTests = 3
@@ -308,6 +309,13 @@ sum_scores= x[[3]]
 x=sum_scores[,-1]
 id=sum_scores[,1]
 x_equated= lineq(x,id)
+boot.se= link.boot.se(x)
+boot.se
+#### Error of equating -  bootstrap
+# 0.2928948   0.6179196   0.5526686
+cor(x_equated[[1]]$totalScore1, true.ability$th)
+cor(x_equated[[1]]$totalScore2, true.ability$th)
+cor(x_equated[[1]]$totalScore3, true.ability$th)
 
 ## New scores
 colMeans(data_3nodes[,-1], na.rm = T)
@@ -325,31 +333,44 @@ for (i in 1:(length(x)-1)) {
 
 ### Check results make sense
 
-data_3nodes[,-1] |>
+g1= x |>
     pivot_longer(cols= starts_with("totalScore"), 
                names_to= "test",
                values_to= "totalScore") |>
   ggplot(aes(x=totalScore, group=test, fill=test, color=test)) + 
-  geom_density(alpha = 0.1)
+  geom_density(alpha = 0.1) +
+  scale_x_continuous(limits=c(0,100)) +
+  scale_y_continuous(limits=c(0,0.05)) +
+  theme(legend.position = "bottom")
 
-
-x_equated[[1]] |>
+g2= x_equated[[1]] |>
     pivot_longer(cols= starts_with("totalScore"), 
                names_to= "test",
                values_to= "totalScore") |>
   ggplot(aes(x=totalScore, group=test, fill=test, color=test)) + 
-  geom_density(alpha = 0.1)
+  geom_density(alpha = 0.1) +
+  scale_x_continuous(limits=c(0,100)) +
+  scale_y_continuous(limits=c(0,0.05)) +
+  theme(legend.position = "bottom")
+
+
+g= ggarrange(g1, g2, common.legend = TRUE)
+ggsave(g,"Plots/linked_scores_network.png")
 
 plot(1:length(x_equated[[1]][,2]),x_equated[[1]][,2])
 plot(x[,3],x_equated[[1]][,4])
 plot(x[,2],x_equated[[1]][,3])
 
-### Error of equating -  bootstrap
-
+## Correlate with true ability
+plot(x[,2],x_equated[[1]][,3])
 
 
 
 ### Truth is known
+plot(x_equated[[1]]$totalScore1, true.ability$th)
+plot(x_equated[[1]]$totalScore2, true.ability$th)
+plot(x_equated[[1]]$totalScore3, true.ability$th)
+
 
 
 
